# PraixisEngine-DGCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml  tailwind.config.js
src/: config.py
src/admin_panel/: base.html
src/admin_panel/components/: header.html  icons.html  login.html  sidebar.html  toast.html
src/admin_panel/modals/: delete_collection.html  delete_file.html  generate_key.html  key_result.html  reset_gpu.html  revoke_key.html  wipe_sessions.html
src/admin_panel/static/css/: admin.css  buttons.css  forms.css  layout.css  modal.css  tailwind.css
src/admin_panel/static/js/: admin.js  audit.js  dashboard.js  helpers.js  keys.js  usage.js  vector.js
src/admin_panel/views/: audit.html  dashboard.html  keys.html  usage.html  vector.html
src/controllers/: admin_controller.py  chat_controller.py  rag_controller.py
src/dependencies/: security.py
src/models/: schemas.py
src/routes/: admin_router.py  chat_router.py  main_router.py  rag_router.py  ui_router.py
src/services/: chat_service.py  llm_runner.py  rag_service.py
src/utils/: ai_client.py  concurrency.py  file_parser.py  memory.py  vector_db.py
src/utils/documents/: file_parser.py  vector_db.py
src/utils/store/: api_keys.py  audit.py  client.py  sessions.py  usage.py
src/utils/system/: logger.py
src/utils/vectordb/: chunking.py  collections.py  constants.py  embeddings.py  ingestion.py  pool.py  retrieval.py
