[project]
name = "praixisengine"
version = "1.2.1"
description = "Multi-tenant AI backend API providing decoupled business logic (chat, RAG, file processing) over an OpenAI-compatible LLM."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "python-dotenv>=1.0.0",
    "fastapi>=0.135.3",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pypdf>=6.10.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.44.0",
    "fastembed>=0.4.0",
]
